test/expected/c_namespace_c.out
class C { namespace N { class D; } }
                    ^
21: error: namespace can not nest inside class
